feat: 实现修改用户信息接口
非登录用户不能修改任何信息，登录的普通用户只能修改自己信息，admin用户可以修改他人信息但是不能将他人提升为admin，Operator才能修改所有人的信息并任命其他人为Operator
